--- a/app/scss/pages/_home.scss
+++ b/app/scss/pages/_home.scss
@@ -1,20 +1,14 @@
 
-
 // main-banner page
-
-.banner
-{
-  // margin-bottom: 6.1em;
+.banner {
   position:relative; 
-  img
-  {
+  img {
     width:100%;
     height: 52rem;
   }
   @at-root
   {
-    &__container
-    {
+    &__container {
       position:absolute;
       right:0;
       bottom: 6.7rem;
@@ -27,8 +21,7 @@
       @extend %container; 
     }
     
-    &__head
-    {    
+    &__head {    
       font-size: 5.7rem;
       font-weight: 800;
       letter-spacing: 2px;
@@ -39,8 +32,7 @@
       padding: 0.25rem 2.2rem 0.25rem 1.3rem;
     }
     
-    &__title
-    {     
+    &__title {     
       font-size: 3.5rem;
       font-weight: 900;
       color: $clr-white;
@@ -49,8 +41,7 @@
       padding:1.2rem 2.1rem 1.2rem 2.1rem;  
     }
     
-    &__detail-link
-    {     
+    &__detail-link {     
       text-decoration: none;
       text-align: center;
       font-size: 2.2rem;
@@ -61,8 +52,7 @@
       padding: 1rem 2.1rem 1rem 2.1rem;
     }
     
-    &__pagedown-outer-box
-    {
+    &__pagedown-outer-box {
       position: absolute;
       top: 47.8rem;
       left: 50%;
@@ -73,8 +63,7 @@
       padding: 2.5rem 4rem;
     }
 
-    &__pagedown-inner-box
-    {
+    &__pagedown-inner-box {
       border:3px solid $clr-white;
       padding:1.15rem 0.7rem;
       // border-bottom: 3px solid $clr-white;
@@ -86,25 +75,18 @@
     
 }
     
-    
-    
-    
-// product banner page
-    
-.manage-develop
-{
+// product banner page 
+.manage-develop {
   position: relative;
   display: flex;
   flex-wrap: wrap;
   margin-top: 13.6rem;
   @extend %container;
         
-  &__container
-  {
+  &__container {
     margin-left:5.9rem;
   }
-  &__title,&__subtitle
-  {
+  &__title,&__subtitle {
     font-size: 4.3rem;
     font-weight: 900;
     text-transform: uppercase;
@@ -112,22 +94,18 @@
     // font-family: $font-lato;
   }
 
-  &__title
-  {
+  &__title {
     margin:0 0 0 11.1rem;
   }
 
-  &__subtitle
-  {
+  &__subtitle {
     margin:0 0 0 23.3rem;
   }
 
-  &__irrigation-text
-  {
+  &__irrigation-text {
     display: inline-block;
     font-size:13.1rem;
     font-weight: 900;
-    // background-image: url(../../images/farm-banner.jpg);
     @include background-image("farm-banner",".jpg");
     color: transparent;
     -webkit-background-clip: text;
@@ -139,11 +117,8 @@
     margin: 0;
     padding: 0;
   }
-    
 
-    
-  &__vidc-logo
-  {
+  &__vidc-logo {
     position: absolute;
     top: 0.2rem;
     left:89.4rem;
@@ -152,39 +127,29 @@
     margin:0;
   }
 }
-       
-    
-    
-// services section 
-    
-.services
-{
-        
+         
+// services section  
+.services {     
   background: linear-gradient(#FFFFFF, rgb(230 230 230 / 60%));
-  &__list
-  {
+  &__list {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    // padding: 11.2rem 2rem;
     padding:11.3rem 2rem 12.2rem 2rem;
     @extend %container;   
-    img
-    {
+    img {
       height:7.5rem;
       width:7.5rem;
     } 
   }
     
-  &__content
-  {
+  &__content {
     display: flex;
     width: 10rem;
     text-align: center;
     margin: 0 4.3rem;
-    a
-    {
+    a {
       display: inline-block;
       text-decoration: none;
       font-weight: 600;
@@ -192,8 +157,7 @@
     }
   }
     
-  &__item
-  {
+  &__item {
     display: block;
     font-size: 1.6rem;
     font-weight: 900;
@@ -202,33 +166,24 @@
     padding-top: 1.6rem;
   }
     
-  &__content--devlopment
-  {
+  &__content--devlopment {
     width:12rem;
   }
       
 }
-        
     
-    
-    
-      // vidc-introduce page
-    
-.vidc
-{
+// vidc-introduce page
+.aboutus{
   position: relative;
   height:52rem;
   width:100%;
   background-color:$clr-redish-brown ;
-  // background-image: url('../images/greybackground.png');
   @include background-image("greybackground",".png");
   background-repeat: no-repeat;
-  // margin:0;
   margin-bottom:0 0 8.2rem 0;
   padding:0;
 
-  &__description-container
-  {
+  &__container {
     position: absolute;
     right: 0;
     left: 0;
@@ -239,41 +194,39 @@
     @extend %container;
   }
     
-  &__video-picture
-  {
-    height: 35.2rem;
-    width:55.6rem;
-    border-radius:1.5rem;
+  &__video-picture {
+    position: relative;
+    border-radius:1.3rem;
+
   }
     
-  &__button-image
-  {
-    position:absolute;
-    top: 13.6rem;
+  &__button-image {
+    position: absolute;
+    top: 15rem;
     left: 23rem;
+    border-radius: 50%;
+    border: 2px solid $clr-btn-light-green;
   }
     
-  &__videobtn
-  {
-    height: 10rem;
-    width:10rem;
-    border:none;
+  &__videobtn {
+    height: 7rem;
+    width: 7rem;
+    border: none;
     border-radius: 8rem;
+    margin: 3px;
     background-color: $clr-btn-green;
-    outline: 1px solid $clr-deepdeep-green ;
+    color:$clr-white;
   }
     
-  &__about-information
-  {
+  &__about-information {
     display: inline-block;
     width: 39.3rem;
     font-size: 1.6rem;
     line-height: 2.25rem;
     color: white;
     margin-left: 8.5rem;
-    padding: 0.75rem 0.1rem;
-    a
-    {
+    padding: 0 0.1rem 0.75rem 0.1rem;
+    a {
       display: inline-block;
       text-decoration: none;
       font-size: 2.2rem;
@@ -284,20 +237,18 @@
     }
   }
     
-  &__about-description
-  {
+  &__about-description {
     display: inline-block;
-    margin: 1.4rem 0 0 0;
+    margin:0;
     padding-bottom: 4.6rem;
   }
     
-  &__about-heading
-  {
+  &__about-heading {
     display: inline-block;
     font-size: 3.6rem;
     font-weight: 800;
     line-height: 1.2;
-    margin: 0;
+    margin: 0 0  1.4rem 0 ;
     padding: 0 0.1rem;
   }
     
