--- a/app/scss/pages/_home.scss
+++ b/app/scss/pages/_home.scss
@@ -1,4 +1,3 @@
-
 // main-banner page
 .banner {
   position:relative; 
@@ -26,8 +25,8 @@
       font-weight: 800;
       letter-spacing: 2px;
       line-height: 1;
-      color: white;
-      background-color: #1B7642;
+      color:$clr-white;
+      background-color: $clr-lightdeep-green;
       margin: 0 0 0 0;
       padding: 0.25rem 2.2rem 0.25rem 1.3rem;
     }
@@ -223,7 +222,7 @@
     width: 39.3rem;
     font-size: 1.6rem;
     line-height: 2.25rem;
-    color: white;
+    color: $clr-white;
     margin-left: 8.5rem;
     padding: 0 0.1rem 0.75rem 0.1rem;
     a {
@@ -231,8 +230,8 @@
       text-decoration: none;
       font-size: 2.2rem;
       line-height: initial;
-      color: white;
-      background-color: #44AF72;
+      color:$clr-white;
+      background-color: $clr-btn-green;
       padding: 1rem 2.15rem;
     }
   }
