scss file updation

--- a/app/scss/fonts/_fonts.scss
+++ b/app/scss/fonts/_fonts.scss
@@ -3,7 +3,7 @@
     font-family: sfcompact;
         }
 
-@font-face {
-        src: url(./../SF-Compact.dmg);
-        font-family: sfdisplay;
-        }
+// @font-face {
+//         src: url(./../SF-Compact.dmg);
+//         font-family: sfdisplay;
+//         }
