--- a/app/scss/helpers/_variable.scss
+++ b/app/scss/helpers/_variable.scss
@@ -16,9 +16,12 @@ $clr-foot-light-green:#1B6D3E;
 $clr-foot-hr-green:#3eff9159;
 $clr-grey-black:#393939;
 $clr-shadow-black: rgb(0 0 0 / 10%);
+
 $clr-shadow-white:rgb(255 255 255 / 80%);
 $clr-deep-shadow-white:rgb(255 255 255 / 90%);
+
 $clr-shadow-black-white: rgb(255 255 255 / 30%);
+$clr-deep-shadow-black-white:rgb(230 230 230 / 60%);
 $clr-shadow-green:rgb(29 29 29 / 10%);
 
 $img-path:"./../images/";
