--- a/app/css/style.css
+++ b/app/css/style.css
@@ -230,8 +230,8 @@ body {
   top: 47.8rem;
   left: 50%;
   right: 50%;
-  background-color: #1B7642;
   display: flex;
+  background-color: #1B7642;
   justify-content: center;
   padding: 2.5rem 4rem;
 }
@@ -287,10 +287,12 @@ body {
 }
 
 .services {
-  background: linear-gradient(#FFFFFF, rgba(230, 230, 230, 0.6));
+  background: linear-gradient(white, rgba(230, 230, 230, 0.6));
+}
+.services__list, .services__content {
+  display: flex;
 }
 .services__list {
-  display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
@@ -301,7 +303,6 @@ body {
   width: 7.5rem;
 }
 .services__content {
-  display: flex;
   width: 10rem;
   text-align: center;
   margin: 0 4.3rem;
@@ -405,22 +406,17 @@ body {
 .footer__common-container {
   display: block;
   position: relative;
-  width: 100%;
   color: white;
   background-color: #1B7642;
-  margin: 0;
-  padding: 0;
 }
 .footer__main-container {
   display: flex;
   flex-wrap: wrap;
-  padding-top: 2rem;
-  padding-bottom: 4rem;
+  padding: 2rem 1.5rem 4rem 1.5rem;
 }
 .footer__right-section {
   margin-right: 1.3rem;
-  padding-right: 0px;
-  padding-top: 4rem;
+  padding: 4rem 0 0 0;
 }
 .footer__email {
   position: relative;
@@ -429,7 +425,7 @@ body {
   display: block;
   width: 447px;
   font-size: 1.4rem;
-  font-weight: bold;
+  font-weight: 900;
   background-color: rgba(0, 0, 0, 0.1);
   border: none;
   border-radius: 3.5rem;
@@ -449,7 +445,7 @@ body {
 }
 .footer__submit {
   position: absolute;
-  top: 4.2rem;
+  top: 4.4rem;
   left: 47.7rem;
   font-family: sfcompact;
   font-size: 1.6rem;
@@ -600,8 +596,4 @@ body {
 @font-face {
   src: url(./../FontsFree-Net-SFCompactDisplay-Regular.ttf);
   font-family: sfcompact;
-}
-@font-face {
-  src: url(./../SF-Compact.dmg);
-  font-family: sfdisplay;
 }
